Sent to Rick minus intro
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9978 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/appendices/pacbioReport/pacbioReport.tex
+++ b/thesis/appendices/pacbioReport/pacbioReport.tex
@@ -162,6 +162,6 @@ acceptorA5a:subject1 & 0.02747    & 0.05594      & 0.491       & \num{0.6238}   
 \end{tabular}
 }
 
-So there were small but significant effects between subjects especially between subject 1 and subjects 2--7. Interestingly T cells were collected from apheresis product in subject 1 and from whole blood in subjects 2--7 although why this would affect later assays is unknown. 
+So there were small but significant effects between subjects especially between subject 1 and subjects 2--7. A potential confounder is that T cells were collected from apheresis product in subject 1 and from whole blood in subjects 2--7 although why this would affect later assays is unknown. 
 
 \end{document}
