--- a/thesis/headMatter.tex
+++ b/thesis/headMatter.tex
@@ -8,6 +8,7 @@
 %\makeatother
 %\renewcommand{\thefigure}{\arabic{figure}}
 
+
 %do some calculation based on user inputs
 \newcommand{\mytitle}{\expandafter\MakeUppercase\expandafter{\mylowertitle}} % Make sure this is in all caps 
 \newlength{\superlen}   % a "scratch" length
@@ -166,6 +167,7 @@
 
 
 \tableofcontents
+\addcontentsline{toc}{chapter}{TABLE OF CONTENTS}
 
 % LIST OF TABLES
 
